syntax = "proto3";

package proto;
option go_package = "go-grpc-example2/bi_direction/greet/proto";


message Greeting{
  string firstName = 1;
  string lastName = 2;
}

message GreetRequest{
  Greeting greeting = 1;
}

message GreetingResponse{
  string msg = 1;
}

service GreetingBiDirection{
  rpc GreetEveryone(stream GreetRequest) returns (stream GreetingResponse);
}